2007-03-07  Gert Driesen  <drieseng@users.sourceforge.net>

	* ModuleBuilderTest.cs: Avoid compiler warning in test for bug #80435.
	Use Assert instead of deprecated Assertion class. Number tests.

2007-03-06  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ModuleBuilderTest.cs: Added GetArrayMethodToStringTest () -#80435.

2007-03-05  Gert Driesen  <drieseng@users.sourceforge.net>

	* EnumBuilderTest.cs: Added tests for bug #81007. Use Assert instead
	of deriving from Assertion. Marked HasElementType test NotWorking on
	2.0 profile.

2007-02-26  Gert Driesen  <drieseng@users.sourceforge.net>

	* MethodBuilderTest.cs: Move from Assertion to Assert. Added tests
	for zero-length and null dll name for DllImport.  Enabled extra tests
	in TestDynamicParams.

2007-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* EnumBuilderTest.cs: Created test for #80396.

2006-12-15  Raja R Harinath  <rharinath@novell.com>

	* TypeBuilderTest.cs (MakeGenericType, Fail_MakeGenericType): New
	tests inspired by #80253.

2006-09-16  Gert Driesen  <drieseng@users.sourceforge.net>

	* DynamicMethodTest.cs: Enabled tests for bug #79367.

2006-09-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* DynamicMethodTest.cs: Added ctor tests for name null check. Added
	tests for bug #79367 (marked NotWorking).

2006-09-02  Zoltan Varga  <vargaz@gmail.com>

	* TypeBuilderTest.cs: Add a test for #79249.

2006-08-31  Zoltan Varga  <vargaz@gmail.com>

	* DynamicMethodTest.cs: Add a test for skipVisibility.

2006-07-31  Sebastien Pouliot  <sebastien@ximian.com> 

	* AssemblyBuilderTest.cs: The GetType_IgnoreCase test case doesn't 
	work under MS.
	* ConstructorBuilderTest.cs: The TestMethodHandle test case doesn't
	work under MS.

2006-07-09  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyBuilderTest.cs: Added test for bug #78724.
	* DynamicMethodTest.cs: Added test for bug #78253, and added test for
	empty method body.

2006-02-27  Gert Driesen  <drieseng@users.sourceforge.net>
